--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Profile</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <link rel="stylesheet" href="source/styles/0_default.css">
     <link rel="stylesheet" href="source/styles/1_main_page.css">
@@ -13,6 +12,11 @@
     <link rel="stylesheet" href="source/styles/200_mediarequests.css">
     <link rel="stylesheet" href="source/styles/101_message.css">
     <link rel="stylesheet" href="source/styles/102_arrow.css">
+    <link rel="apple-touch-icon" sizes="180x180" href="source/images/icon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="source/images/icon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="source/images/icon/favicon-16x16.png">
+    <link rel="manifest" href="source/images/icon/site.webmanifest">
+    <title>My Profile</title>
 </head>
 <body>
     <div class="background">
@@ -131,9 +135,9 @@
         </div>
         <!-- TITLE ANIMATION -->
         <div class="title">
-            <div id="title_container">
+            <div class="title_container">
                 <div id="message">
-                <a id="animate" href="#"></a>
+                    <a id="animate" href="#"></a>
                 </div>
             </div>
         </div>
@@ -356,7 +360,7 @@
                     <div class="col-1 col-md-1"></div>
                 </div>
 
-                <div class="row education_row">
+                <div class="row education_row  mt-2">
                     <div class="col-1"></div>
                     <div class="col-10">
                         <h4 class="rus_lang ep_header animation-items" id="scrollspyHeading3">План обучения | Рабочий процесс</h4>
@@ -549,13 +553,13 @@
                     <div class="col-1"></div>
                 </div>
 
-                <div class="row contacts_row">
+                <div class="row contacts_row mb-4 mt-2">
                     <div class="col-1"></div>
                     <div class="col-10">
                         <h4 class="rus_lang c_header animation-items" id="scrollspyHeading4">Контакты</h4>
                         <h4 class="en_lang c_header animation-items" id="scrollspyHeading8">Contacts</h4>
                         <hr>
-                        <div class="row">
+                        <div class="row my_contacts_subrow">
                             <div class="col-xl-2 col-lg-1"></div>
                             <div class="col-xl-8 col-lg-10 col-xs-12 my_contacts">
                                 <div class="my_contacts_box">
@@ -564,7 +568,7 @@
                                         <li class="en_lang"><b >Mobile phone | WhatsApp:</b> <a href="https://wa.me/79024224565?text=You%20can%20contact%20me%20by%20this%20phone%20number" id="style-1" data-replace="+79024224565"><span>+79024224565</span></a></li>
                                         <li><b>E-mail:</b> <a href="mailto:myemail554411@gmail.com" id="style-2" data-replace="myemail554411@gmail.com"><span>myemail554411@gmail.com</span></a></li>
                                         <li><b>Telegram:</b> <a href="https://t.me/Rett_ooo" id="style-3" data-replace="@Rett_ooo"><span>@Rett_ooo</span></a> </li>
-                                        <li class="rus_lang" ><b>Вконтакте:</b><a href="https://vk.com/rett_oo" id="style-4" data-replace="Rett_ooo"><span>Rett_ooo</span></a></li>
+                                        <li class="rus_lang" ><b>Вконтакте: </b> <a href="https://vk.com/rett_oo" id="style-4" data-replace=" Rett_ooo"><span> Rett_ooo</span></a></li>
                                     </ul>
                                 </div>
                             </div>
@@ -576,7 +580,7 @@
             </div>
         </section>
 
-        <footer>
+        <footer class="text-center">
             <div class="container-fluid footer_container">
                 <div class="row">
                     <div class="col-lg-2 col-sm-1"></div>
@@ -600,7 +604,7 @@
     <script src="source/scripts/block_animate.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
     <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
-    <script src="source/scripts/animation_message2.js" ></script>
+    <script src="source/scripts/animation_htitle.js" ></script>
     <script src="source/scripts/path.js"></script>
     <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js'></script>
     <script src="source/scripts/language.js"></script>
