--- a/project2.html
+++ b/project2.html
@@ -4,22 +4,213 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="static/styles/default.css">
-    <link rel="stylesheet" href="static/styles/project_page.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+    <link rel="stylesheet" href="source\styles\vs2015.min.css">
+    <link rel="stylesheet" href="source/styles/0_default.css">
+    <link rel="stylesheet" href="source/styles/1_main_page.css">
+    <link rel="stylesheet" href="source/styles/2_project_page.css">
     <link rel="stylesheet" href="source/styles/100_animation.css">
-    <title>Project page</title>
+    <link rel="stylesheet" href="source/styles/200_mediarequests.css">
+    <link rel="apple-touch-icon" sizes="180x180" href="source/images/icon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="source/images/icon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="source/images/icon/favicon-16x16.png">
+    <link rel="manifest" href="source/images/icon/site.webmanifest">
+    <title>My Portfolio Site</title>
 </head>
 <body>
     <div class="background">
-        <div class="container-fluid">
-            <div class="row">
+        <header class="header_container">
+            <div class="header_logo">
+                <div class="header_item" id="my">
+                    <span>MY</span>
+                </div>
+                <div class="header_item" id="website">
+                    <span>WEBSITE</span>
+                </div>
+                <div class="header_item" id="portfolio">
+                    <span>PORTFOLIO</span>
+                </div>
+            </div>
+            <nav class="topbar_container">
+                <ul class="nav nav-pills">
+                    <li class="nav-item">
+                        <div class="top_button_box">
+                            <div class="border"></div>
+                            <div data-bs-target="#topbar_container" data-bs-smooth-scroll="true" tabindex="2">
+                                <a class="nav-link rus_lang " href="index.html#scrollspyHeading2">Портфолио</a>
+                                <a class="nav-link en_lang" href="index.html#scrollspyHeading6">Portfolio</a>
+                            </div>
+                        </div>
+                    </li>
+                    <li class="nav-item">
+                        <div class="top_button_box">
+                            <div class="border"></div>
+                            <div data-bs-target="#topbar_container" data-bs-smooth-scroll="true" tabindex="0">
+                                <a class="nav-link rus_lang" href="index.html#scrollspyHeading1">Обо мне</a>
+                                <a class="nav-link en_lang" href="index.html#scrollspyHeading5">About me</a>
+                            </div>
+                        </div>
+                    </li>
+                    <li class="nav-item">
+                        <div class="top_button_box">
+                            <div class="border"></div>
+                            <div data-bs-target="#topbar_container" data-bs-smooth-scroll="true" tabindex="0">
+                                <a class="nav-link rus_lang" href="index.html#scrollspyHeading3">План обучения</a>
+                                <a class="nav-link en_lang" href="index.html#scrollspyHeading7">Education plan</a>
+                            </div>
+                        </div>
+                    </li>
+                    <li class="nav-item">
+                        <div class="top_button_box">
+                            <div class="border"></div>
+                            <div data-bs-target="#topbar_container" data-bs-smooth-scroll="true" tabindex="0">
+                                <a class="nav-link rus_lang" href="index.html#scrollspyHeading4">Контакты</a>
+                                <a class="nav-link en_lang" href="index.html#scrollspyHeading8">Contacts</a>
+                            </div>
+                        </div>
+                    </li>
+                </ul>
+            </nav>
+            <div id="menu">
+                <div id="menu-bar" onclick="menuOnClick()">
+                    <div id="bar1" class="bar"></div>
+                    <div id="bar2" class="bar"></div>
+                    <div id="bar3" class="bar"></div>
+                </div>
+                <nav class="nav_hmbrg" id="nav">
+                    <ul>
+                        <li>
+                            <div data-bs-target="#topbar_container" data-bs-smooth-scroll="true" tabindex="2">
+                                <a class="hmbrgr_text rus_lang " href="#scrollspyHeading2">Портфолио</a>
+                                <a class="hmbrgr_text en_lang" href="#scrollspyHeading6">Portfolio</a>
+                            </div>
+                        </li>
+                        <li>
+                            <div data-bs-target="#topbar_container" data-bs-smooth-scroll="true" tabindex="0">
+                                <a class="hmbrgr_text rus_lang" href="#scrollspyHeading1">Обо мне</a>
+                                <a class="hmbrgr_text en_lang" href="#scrollspyHeading5">About me</a>
+                            </div>
+                        </li>
+                        <li>
+                            <div data-bs-target="#topbar_container" data-bs-smooth-scroll="true" tabindex="0">
+                                <a class="hmbrgr_text rus_lang" href="#scrollspyHeading3">План обучения</a>
+                                <a class="hmbrgr_text en_lang" href="#scrollspyHeading7">Education plan</a>
+                            </div>
+                        </li>
+                        <li>
+                            <div data-bs-target="#topbar_container" data-bs-smooth-scroll="true" tabindex="0">
+                                <a class="hmbrgr_text rus_lang" href="#scrollspyHeading4">Контакты</a>
+                                <a class="hmbrgr_text en_lang" href="#scrollspyHeading8">Contacts</a>
+                            </div>
+                        </li>
+                    </ul>
+                </nav>
+            </div>
+            <div class="menu-bg" id="menu-bg"></div>
+            <div class="git_logo">
+                <a href="https://github.com/Rett-oo">
+                    <img src="source/images/github-mark.svg" alt="git_img">
+                </a>
+            </div>
+        </header>
+
+        <section class="container-fluid">
+            <div class="row 1st">
                 <div class="col-1"></div>
-                <div class="col-10">
-                    PAGE 2
+                <div class=" col-sm-10 col-10">
+                    <div class="row mt-4">
+                        <div class="col-sm-6 col-11  text-center proj_img_box ">
+                            <div class="proj_img_item animation-items"><img src="source/images/mysite.png" alt="mysite_img"></div>
+                        </div>
+                        <div class=" col-sm-6 col-11 project_info_box animation-items">
+                            <ul class="rus_lang">
+                                <li><h1> My Portfolio Site </h1></li>
+                                <hr>
+                                <li><b>Функции:</b><span> показать потенциальному работодателю мои умения. Пространство для изучения JS.</span></li>
+                                <li><b>Используемые библиотеки:</b><span> Bootstrap</span></li>
+                                <li><b>Версии языков:</b> HTML5, CSS 4.15, JS ES6</li>
+                            </ul>
+                            <ul class="en_lang">
+                                <li><h1> My Portfolio Site </h1></li>
+                                <hr>
+                                <li><b>Functions:</b><span> show a potential employer my skills. Space for learning JS.</span></li>
+                                <li><b>Used libraries:</b><span> Bootstrap</span></li>
+                                <li><b>Versions of languages:</b> HTML5, CSS 4.15, JS ES6</li>
+                            </ul>
+                        </div>
+                    </div>
                 </div>
                 <div class="col-1"></div>
             </div>
-        </div>
+            <div class="row mt-4">
+                <div class="col-1"></div>
+                <div class="col-10 code_col">
+                    <h2 class="example_text">Example.py</h2>
+                    <div class="row before_code_text ">
+                        <span class="rus_lang">На примере этого приложения Вы можете увидеть как я изучаю язык. Возьмем функцию которая просто заполняет таблицу по заданным условиям:</span>
+                        <span class="en_lang">You can see how I learn a language by using this app as an example. Let's take a function that simply fills the table according to the given conditions:</span>
+                    </div>
+                    <div class="row mt-2 before_code_text2">
+                        <div class="col-md-6 col-12">
+                            <p class="text-center rus_lang">Так выглядит код спустя 2 недели изучения Python: 🤢</p>
+                            <p class="text-center en_lang">This is how my code looks like after two weeks of learning Python: 🤢</p>
+                        </div>
+                        <div class="col-md-6 col-12 after_text">
+                            <p class="text-center rus_lang">А так спустя 1,5 месяца: 😐</p>
+                            <p class="text-center en_lang">After 1.5 months: 😐</p>
+                        </div>
+                    </div>
+                    <div class="row mt-2">
+                        <div class="col-md-6 col-12">
+                            <pre class="pre_box"  id="style-1">
+                                <code class="language-python force-overflow">
+                                    <span>
+                                    </span>
+                                </code>
+                            </pre>
+                        </div>
+                    </div>
+                    <div class="row after_code_text text-center">
+                        <span class="rus_lang">Я всегда стремлюсь сократить код, ведь так удобнее с ним работать и поддерживать в дальнейшем. <p>Просмотреть репозиторий с этим проектом Вы можете по <a href="#">этой</a> ссылке </p> </span>
+                        <span class="en_lang">I always try to keep the code short, because it makes it easier to work with and maintain in the future. You can view the repository with this project at <a href="#">this link</a> </p> </span>
+                    </div>
+                </div>
+                <div class="col-1"></div>
+            </div>
+        </section>
+
+        <footer class="mt-4 text-center">
+            <div class="container-fluid footer_container">
+                <div class="row">
+                    <div class="col-lg-2 col-sm-1"></div>
+                    <div class=" col-lg-8 col-sm-8">
+                        <span class="rus_lang">Спасибо за посещение!</span>
+                        <span class="en_lang">Thank you for visiting!</span>
+                        <p class="rus_lang">Если вы хотите оставить сообщение или заметили баг, то пожалуйста свяжитесь
+                            со мной <a href="#" class="animate_link">этим</a> контактам.</p>
+                        <p class="en_lang">If you want to leave a message or notice a bug, please contact me at <a href="#" class="animate_link">these</a> contacts.</p>
+                    </div>
+                    <div class="col-lg-2 col-sm-3 lang_area">
+                        <div class="footer_vertical_line"></div>
+                        <div class="lang_buttons">
+                            <a class="btn btn-primary button rus_lang" href="#" role="button">Английский</a>
+                            <a class="btn btn-primary button en_lang" href="#" role="button">Russian</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </footer>
     </div>
+    <script src="source/scripts/block_animate.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
+    crossorigin="anonymous"></script>
+    <script src="source/scripts/hmbg_btn.js"></script>
+    <script src="source/scripts/highlight.min.js"></script>
+    <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
+    <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js'></script>
+    <script src="source/scripts/language.js"></script>
+    <script>hljs.highlightAll();</script>
 </body>
 </html>
