--- a/index.html
+++ b/index.html
@@ -21,7 +21,6 @@
 <body>
     <div class="background">
         <!-- <div id="particles-js"></div> -->
-        <!-- HEADER -->
         <header class="header_container">
             <div class="header_logo">
                 <div class="header_item" id="my">
@@ -178,7 +177,7 @@
                                 </div>
                                 <div class="col-lg-6 col-md-12 more_info_container">
                                     <span class="rus_lang mi_text animation-items"><p class="mi_text animation-items">Приветствую, мой будущий работодатель!</p> <p class="mi_text ru animation-items">Я новичок в программировании, но очень люблю компьютеры.
-                                        Я начал изучать Python 2 месяца назад и начал с фреймворка PyQt5 потому, что люблю десктопные приложения</p></span>
+                                        Я начал изучать Python 2 месяца назад и начал с фреймворка PyQt5 потому, что люблю десктопные приложения.</p></span>
                                     <span class="en_lang mi_text animation-items"><p class="mi_text animation-items">Greetings, to my future employer.</p> <p class="mi_text en animation-items">I'm new to programming and really want to connect my life with computers.
                                         I started learning Python 2 months ago with the PyQt5 framework because I like GUI applications.</p></span>
                                     <p class="rus_lang mi_text ru animation-items">Помимо "PyQt" в своей разработке мне довелось использовать такие библиотеки как: requests, SQLite, json. Само собой при этом использовал Git.
@@ -449,7 +448,7 @@
                                     </div>
                                 </div>
                                 <div class="row rus_lang"><p><b>Наконе-то попишем</b></p> <span>Продумываю алгоритм работы кода, творю...</span></div>
-                                <div class="row en_lang"><p><b> We'll finally write...</b></p><span>Thinking over the algorithm of the code</span></div>
+                                <div class="row en_lang"><p><b> We'll finally write smthn...</b></p><span>Thinking over the algorithm of the code</span></div>
                             </div>
                             <div class="col-3 time_mngmt">
                                 <div class="row">
@@ -472,7 +471,7 @@
                                     </div>
                                 </div>
                                 <div class="row rus_lang"><p><b>Не Python<span class="om_word">ом</span> едины</b></p><span>читаю о языках или приёмах с которыми столкнулся во время разработки</span></div>
-                                <div class="row en_lang"><p><b> Not Python united</b></p><span>I read about languages or techniques that I encountered during development</span></div>
+                                <div class="row en_lang"><p><b> Python is not the only one/b></p><span>I read about languages or techniques that I encountered during development</span></div>
                             </div>
                             <div class="col-3 time_mngmt">
                                 <div class="row">
@@ -601,14 +600,14 @@
             </div>
         </footer>
 
-    <script src="source/scripts/block_animate.js"></script>
+    <script src="source/scripts/animation_intoscrn.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
     <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
-    <script src="source/scripts/animation_htitle.js" ></script>
-    <script src="source/scripts/path.js"></script>
     <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js'></script>
-    <script src="source/scripts/language.js"></script>
-    <script src="source/scripts/hmbg_btn.js"></script>
+    <script src="source/scripts/animation_htitle.js" ></script>
+    <script src="source/scripts/animation_svg_path.js"></script>
+    <script src="source/scripts/change_language.js"></script>
+    <script src="source/scripts/hmbrgr_menu_btn.js"></script>
     <!-- <script src='https://cldup.com/S6Ptkwu_qA.js'></script><script  src="source/bg_animation.js"></script> -->
 </body>
 </html>
