--- a/index.html
+++ b/index.html
@@ -471,7 +471,7 @@
                                     </div>
                                 </div>
                                 <div class="row rus_lang"><p><b>Не Python<span class="om_word">ом</span> едины</b></p><span>читаю о языках или приёмах с которыми столкнулся во время разработки</span></div>
-                                <div class="row en_lang"><p><b> Python is not the only one/b></p><span>I read about languages or techniques that I encountered during development</span></div>
+                                <div class="row en_lang"><p><b> Python is not the only one</b></p><span>I read about languages or techniques that I encountered during development</span></div>
                             </div>
                             <div class="col-3 time_mngmt">
                                 <div class="row">
